crates/parser/src/snapshots/parser__tests__parse_inline_err@0184_prefix_assert_no_name.ath.snap
---
source: crates/parser/src/tests.rs
description: "(assert := true)\n"
input_file: crates/parser/test_data/parser/inline/err/dir/0184_prefix_assert_no_name.ath
---
PREFIX_ASSERT_DIR
  L_PAREN "("
  ASSERT_KW "assert"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "true"
  R_PAREN ")"
  WHITESPACE "\n"
error 7: expected identifier for the assertion

