crates/parser/src/snapshots/parser__tests__parse_inline_ok@0020_nested_and_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(&& bar (&& baz))\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0020_nested_and_expr.ath
---
AND_EXPR
  L_PAREN "("
  AMP2 "&&"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "bar"
  WHITESPACE " "
  AND_EXPR
    L_PAREN "("
    AMP2 "&&"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "baz"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

