crates/parser/src/snapshots/parser__tests__parse_inline_ok@0022_nested_seq_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "(seq bar (seq baz))\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0022_nested_seq_expr.ath
---
SEQ_EXPR
  L_PAREN "("
  SEQ_KW "seq"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "bar"
  WHITESPACE " "
  SEQ_EXPR
    L_PAREN "("
    SEQ_KW "seq"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "baz"
    R_PAREN ")"
  R_PAREN ")"
  WHITESPACE "\n"

