crates/parser/src/snapshots/parser__tests__parse_inline_ok@0039_match_expr_multiple_arms.ath.snap
---
source: crates/parser/src/tests.rs
description: "match foo { bar => baz | qux => (quux \"cool\") }\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0039_match_expr_multiple_arms.ath
---
INFIX_MATCH_EXPR
  MATCH_KW "match"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  MATCH_ARM
    IDENT_PAT
      NAME
        IDENT "bar"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "baz"
  WHITESPACE " "
  MATCH_ARM
    PIPE "|"
    WHITESPACE " "
    IDENT_PAT
      NAME
        IDENT "qux"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    APPLICATION_EXPR
      L_PAREN "("
      IDENT_EXPR
        NAME_REF
          IDENT "quux"
      WHITESPACE " "
      LITERAL_EXPR
        LITERAL
          STRING "\"cool\""
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

